apps/base/media/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
  labels:
    app: tautulli
spec:
  ports:
  - port: 8181
    targetPort: 8181
    protocol: TCP
    name: http
  selector:
    app: tautulli
