apps/base/media/tautulli/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: tautulli.mellor.dev
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: internal
  rules:
  - host: tautulli.mellor.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tautulli
            port:
              number: 8181
  tls: 
  - secretName: tautulli.mellor.dev
    hosts:
    - tautulli.mellor.dev
